package designPatterns.decorator;

public class ChocolateSyrup implements Icecream{
    private final Icecream icecream;

    public ChocolateSyrup(Icecream icecream){
        this.icecream = icecream; // this will always be a addon
    }

    @Override
    public int getCost() {
        return icecream.getCost() + 40;
    }

    @Override
    public String getDescription() {
        return icecream.getDescription() + ", Chocolate Syrup";
    }
}
