@startuml

title __DECORATOR's Class Diagram__\n

  namespace  {
    namespace esignPatterns.decorator {
      class designPatterns.decorator.ChocoChip {
          + ChocoChip()
          + getCost()
          + getDescription()
      }
    }
  }
  

  namespace  {
    namespace esignPatterns.decorator {
      class designPatterns.decorator.ChocoCone {
          + ChocoCone()
          + ChocoCone()
          + getCost()
          + getDescription()
      }
    }
  }
  

  namespace  {
    namespace esignPatterns.decorator {
      class designPatterns.decorator.ChocolateScoup {
          + ChocolateScoup()
          + getCost()
          + getDescription()
      }
    }
  }
  

  namespace  {
    namespace esignPatterns.decorator {
      class designPatterns.decorator.ChocolateSyrup {
          + ChocolateSyrup()
          + getCost()
          + getDescription()
      }
    }
  }
  

  namespace  {
    namespace esignPatterns.decorator {
      interface designPatterns.decorator.Icecream {
          {abstract} + getCost()
          {abstract} + getDescription()
      }
    }
  }
  

  namespace  {
    namespace esignPatterns.decorator {
      class designPatterns.decorator.Main {
          + Main()
          {static} + main()
      }
    }
  }
  

  namespace  {
    namespace esignPatterns.decorator {
      class designPatterns.decorator.OrangeCone {
          + OrangeCone()
          + OrangeCone()
          + getCost()
          + getDescription()
      }
    }
  }
  

  namespace  {
    namespace esignPatterns.decorator {
      class designPatterns.decorator.VanilaScoop {
          + VanilaScoop()
          + getCost()
          + getDescription()
      }
    }
  }
  

  designPatterns.decorator.ChocoChip .up.|> designPatterns.decorator.Icecream
  designPatterns.decorator.ChocoChip o-- designPatterns.decorator.Icecream : icecream
  designPatterns.decorator.ChocoCone .up.|> designPatterns.decorator.Icecream
  designPatterns.decorator.ChocoCone o-- designPatterns.decorator.Icecream : icecream
  designPatterns.decorator.ChocolateScoup .up.|> designPatterns.decorator.Icecream
  designPatterns.decorator.ChocolateScoup o-- designPatterns.decorator.Icecream : icecream
  designPatterns.decorator.ChocolateSyrup .up.|> designPatterns.decorator.Icecream
  designPatterns.decorator.ChocolateSyrup o-- designPatterns.decorator.Icecream : icecream
  designPatterns.decorator.OrangeCone .up.|> designPatterns.decorator.Icecream
  designPatterns.decorator.OrangeCone o-- designPatterns.decorator.Icecream : icecream
  designPatterns.decorator.VanilaScoop .up.|> designPatterns.decorator.Icecream
  designPatterns.decorator.VanilaScoop o-- designPatterns.decorator.Icecream : icecream


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
